RESOLVED FIXED184639
[Web Animations] Animations do not naturally get a finish event
https://bugs.webkit.org/show_bug.cgi?id=184639
Summary [Web Animations] Animations do not naturally get a finish event
Antoine Quint
Reported 2018-04-15 14:40:26 PDT
[Web Animations] Animations do not naturally get a finish event
Attachments
Patch (4.78 KB, patch)
2018-04-15 14:46 PDT, Antoine Quint
jonlee: review+
Antoine Quint
Comment 1 2018-04-15 14:41:58 PDT
If an animation is started and plays naturally, without being programatically seeked, to its end time, it does not get a "finish" event, nor does its finished promise get fulfilled.
Antoine Quint
Comment 2 2018-04-15 14:42:09 PDT
Antoine Quint
Comment 3 2018-04-15 14:46:13 PDT
Jon Lee
Comment 4 2018-04-15 15:28:19 PDT
Comment on attachment 337978 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=337978&action=review > LayoutTests/imported/w3c/ChangeLog:11 > + * web-platform-tests/web-animations/timing-model/animations/updating-the-finished-state-expected.txt: Nice.
Jon Lee
Comment 5 2018-04-15 15:35:18 PDT
Comment on attachment 337978 [details] Patch r+ assuming green bots.
Antoine Quint
Comment 6 2018-04-15 22:38:08 PDT
Note You need to log in before you can comment on or make changes to this bug.